# mp3-uploader

./: .env.template  .gitignore  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
docker/api/: Dockerfile
docker/base/: Dockerfile
docker/telegram/: Dockerfile
src/: __init__.py  config.py  logger.py  utils.py
src/api/: main.py  schemas.py
src/api/v1/: __init__.py  mp3.py  youtube.py
src/telegram/: common.py  main.py
src/telegram/handlers/: __init__.py  audio.py  buttons.py  text.py
src/telegram/middleware/: __init__.py  access_permission.py
